assets/css/style.css
/* Reset and base styles  */
* {
    padding: 0;
    margin: 0;
    border: none;
}

*,
*::before,
*::after {
    box-sizing: border-box;
}


h1, h2, h3, h4, h5, h6, p {
    font-size: inherit;
    font-weight: inherit;
}

ul {
    list-style: none;
    margin-bottom: 0;

    padding-left: 0;
}

img, svg {
    display: block;
    max-width: 100%;
    height: auto;
}

/* Form */
input, textarea, button, select {
    font-family: inherit;
    font-size: inherit;
}

input::-ms-clear {
    display: none;
}


/*variables*/
:root {
    --nav-background-color: #fff5ee;
}


/*Main styles*/
body {
    display: flex;
    flex-direction: column;
    align-content: space-between;
    height: 100dvh;
    max-width: 1800px;
    margin: 0 auto;
}

.main-container {
    flex-grow: 1;
}

.main-container p {
    font-size: xx-large;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri;
    text-align: center;
}

.main-container img {
    width: -webkit-fill-available;
    /*border-radius: 5%;*/
}

.main-container h1 {
    font-size: 2rem;
    font-weight: 700;
    margin-inline: auto;
    text-align: center;
}

.main-imposter {
    flex-grow: 1;
    margin: 20px 0;
}

.main-imposter p {
    font-size: xx-large;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri;
    text-align: center;
}

.main-imposter img {
    width: -webkit-fill-available;
    border-radius: 5%;
}

.main-imposter h1 {
    font-size: 2rem;
    font-weight: 700;
    margin-inline: auto;
    text-align: center;
}
.main-description {
    margin: 20px 0;
    font-family: Calibri, serif;
    font-size: 1.5rem;
    font-style: oblique;
    padding: 0 30px;
}

.main-section {
    color: seashell;
    position: relative;
    height: 30em;
    width: 100%;
    background: rgb(131, 58, 180);
    background: linear-gradient(58deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 100%);
    display: flex;
}

.main-image {
    position: sticky;
    left: 50%;
}

.main-image img {
    height: 20em;
}

.main-section h2 {
    position: absolute;
    top: 1em;
    left: 1em;
    font-size: 5rem;
    width: 30rem;
}

.main-section p {
    position: absolute;
    bottom: 2em;
    right: 1em;
    font-size: 3rem;
    width: 44%;
}

@media (max-width: 40em) {
    .main-section {
        height: 25em;
    }

    .main-section h1 {
        top: 1em;
        left: unset;
        font-size: 3rem;
        width: 100%;
        text-align: center;
    }

    .main-section p {
        text-align: center;
        bottom: 3em;
        right: unset;
        left: 0;
        font-size: 2rem;
        width: 100%;
    }

    .main-image {
        position: relative;
        left: 10%;
        top: 25%;
    }

    .main-image img {
        height: 10em;

    }
}

.main-image img {
    margin-inline: auto;
    object-fit: scale-down;
}

.title {
    font-size: 2rem;
    font-weight: 700;
    margin-inline: auto;
    text-align: center;
    margin-bottom: 30px;
}


@media (max-width: 991px) {
    .youtube .section-youtube-wrapper {
        grid-template-rows: repeat(3, 250px);
        grid-template-columns: none;
    }
}
.section-youtube-wrapper {
    display: grid;
    grid-template-columns: repeat(3, 300px);
    grid-gap: 5px 50px;
    grid-auto-flow: row;
    justify-content: center;
}

.separator {
    display: flex;
    border: 2px inset black;
    border-radius: 2px;
    margin-top: 30px;
    margin-bottom: 10px;
}

.spotify-player-container {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    margin-top: 10px;
}

.spotify-description {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    margin-top: 10px;
}

.spotify-player {
    width: 100%;
    border-radius: 12px;
    height: 352px;
    margin-top: 10px;
}

.spotify-link {
    display: flex;
    justify-content: center;
}

.youtube-container iframe {
    width: 300px;
    height: auto;
}

.testimonials-section {
    margin: 50px 0;
    display: flex;
    align-items: start;
    justify-content: space-evenly;
    gap: 50px;
}

.testimonial {
    width: 300px;
}

.testimonial h2 {
    margin-top: 15px;
    text-align: center;
    font-weight: 700;
    font-size: 1.5rem;
}

.testimonial p {
    margin-top: 30px;
    text-align: justify;
    margin-inline: auto;
    text-align: center;
}

@media (max-width: 991px) {
    .testimonial {
        margin: 10px;
    }

    .testimonials-section {
        flex-direction: column;
        align-items: center;
        gap: 20px;
        vertical-align: middle;
    }

    .picture-and-name {
        width: 40%;
        margin: auto;
        display: inline-table;
        text-align: center;
    }

    .testimonials-section p {
        width: 50%;
        display: inline-block;
        padding-left: 10px;
        text-align: center;
        margin-top: auto;
        margin-bottom: auto;
    }

    .testimonial-right {
        left: auto;
    }
}

footer {
    display: flex;
    background: linear-gradient(58deg,
     rgba(131, 58, 180, 1) 0%,
     rgba(253, 29, 29, 1) 50%,
     rgba(252, 176, 69, 1) 100%);
}

.container {
    margin: 20px 40px ;
    color: #fff5ee;
}

.heading {
    font-size: 40px;
    color: #fff5ee;
    text-align: center;
}

.profiles {
    display: flex;
    justify-content: space-around;
    margin: 20px 80px;
}

.profile {
    flex-basis: 260px;
}

.profile .profile-img {
    height: 200px;
    width: 200px;
    border-radius: 50%;
    filter: drop-shadow(10px 10px 25px rgb(242, 236, 236));
    cursor: pointer;
    transition: 300ms;
}
.profile:hover {
    filter: grayscale(0);
}

.user-name {
    margin-top: 20px;
    font-size: 25px;
}

.profile h5 {
    font-size: 18px;
    font-weight: 100;
    letter-spacing: 2px;
    color: #83f1fb;
}
.profile p {
    font-size: 16px;
    margin-top: 10px;
    
    text-align: justify;
}

@media only screen and (max-width:1150px) {
    .profiles {
        flex-direction: column;
    }
    .profile {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    .profile p {
        text-align: center;
        margin: 20px 60px 80px 60px;
        font-size: 18px;
    }
}
@media only screen and (max-width:900px) {
    .heading {
        font-size: 40px;
        text-align: center;
    }
    .profiles {
        margin: 20px 0;
    }
    .profile p {
        margin: 20px 10px 80px 10px;
    }
}

